實作三個長寬各150px且style符合需求的正方形

--- a/css/color_boxes.html
+++ b/css/color_boxes.html
@@ -7,6 +7,23 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div style="background: #CCDDFF; text-align: left; color: #444444; width: 150px; height: 150px; border: dashed;">
+        <p>背景 ＃CCDDFF</p>
+        <p>字置左 ＃444444</p>
+        <p>長寬各 150px</p>
+        <p>邊框 dashed</p>
+    </div>
+    <div style="background: #CCCCFF; text-align: center; color: #444444; width: 150px; height: 150px; border: solid;">
+        <p>背景 ＃CCCCFF</p>
+        <p>字置中 ＃444444</p>
+        <p>長寬各 150px</p>
+        <p>邊框 solid</p>
+    </div>
+    <div style="background: #FFCCCC; text-align: right; color: #444444; width: 150px; height: 150px; border: dotted;">
+        <p>背景 ＃FFCCCC</p>
+        <p>字置右 ＃444444</p>
+        <p>長寬各 150px</p>
+        <p>邊框 dotted</p>
+    </div>
 </body>
 </html>
