--- a/css/color_boxes.html
+++ b/css/color_boxes.html
@@ -5,21 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        div {
+            width: 150px;
+            height: 150px;
+            color: #444444;
+        }
+    </style>
 </head>
 <body>
-    <div style="background: #CCDDFF; text-align: left; color: #444444; width: 150px; height: 150px; border: dashed;">
+    <div style="background: #CCDDFF; text-align: left; border: dashed;">
         <p>背景 ＃CCDDFF</p>
         <p>字置左 ＃444444</p>
         <p>長寬各 150px</p>
         <p>邊框 dashed</p>
     </div>
-    <div style="background: #CCCCFF; text-align: center; color: #444444; width: 150px; height: 150px; border: solid;">
+    <div style="background: #CCCCFF; text-align: center; border: solid;">
         <p>背景 ＃CCCCFF</p>
         <p>字置中 ＃444444</p>
         <p>長寬各 150px</p>
         <p>邊框 solid</p>
     </div>
-    <div style="background: #FFCCCC; text-align: right; color: #444444; width: 150px; height: 150px; border: dotted;">
+    <div style="background: #FFCCCC; text-align: right;  border: dotted;">
         <p>背景 ＃FFCCCC</p>
         <p>字置右 ＃444444</p>
         <p>長寬各 150px</p>
