--- a/css/color_boxes.html
+++ b/css/color_boxes.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-        div {
+        .box {
             width: 150px;
             height: 150px;
             color: #444444;
@@ -14,19 +14,19 @@
     </style>
 </head>
 <body>
-    <div style="background: #CCDDFF; text-align: left; border: dashed;">
+    <div class="box" style="background: #CCDDFF; text-align: left; border: dashed;">
         <p>背景 ＃CCDDFF</p>
         <p>字置左 ＃444444</p>
         <p>長寬各 150px</p>
         <p>邊框 dashed</p>
     </div>
-    <div style="background: #CCCCFF; text-align: center; border: solid;">
+    <div class="box" style="background: #CCCCFF; text-align: center; border: solid;">
         <p>背景 ＃CCCCFF</p>
         <p>字置中 ＃444444</p>
         <p>長寬各 150px</p>
         <p>邊框 solid</p>
     </div>
-    <div style="background: #FFCCCC; text-align: right;  border: dotted;">
+    <div class="box" style="background: #FFCCCC; text-align: right;  border: dotted;">
         <p>背景 ＃FFCCCC</p>
         <p>字置右 ＃444444</p>
         <p>長寬各 150px</p>
