將style獨立成css設定檔

--- a/css/color_boxes.html
+++ b/css/color_boxes.html
@@ -5,31 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <style>
-        .box {
-            width: 150px;
-            height: 150px;
-            color: #444444;
-        }
-
-        #box1 {
-            background: #CCDDFF; 
-            text-align: left; 
-            border: dashed;
-        }
-        
-        #box2 {
-            background: #CCCCFF; 
-            text-align: center; 
-            border: solid;
-        }
-
-        #box3 {
-           background: #FFCCCC; 
-           text-align: right;  
-           border: dotted; 
-        }
-    </style>
+    <link rel="stylesheet" href="box_style.css">
 </head>
 <body>
     <div class="box" id="box1">
